2002-02-11  Mark McLoughlin  <mark@skynet.ie>

	* configure.in: Version 1.5.8

	* configure.in: update required versions to
	recent versions. Check version of gtk-doc.

2002-02-11  Mark McLoughlin  <mark@skynet.ie>

	* Makefile.am: add man directory.

	* configure.in: remove gnome-terminal.

2002-02-11  Mark McLoughlin  <mark@skynet.ie>

	* Makefile.am: (SUBDIRS): remove gnome-terminal. See
	the profterm module for the Gnome 2.0 terminal.

2002-02-11  Mark McLoughlin  <mark@skynet.ie>

	* Netscape.desktop.in: just point at netscape. We don't
	ship gnome-moz-remote anymore.

2002-02-10 John Fleck <jfleck@inkstain.net>

	* applets/gen_util/help/C/mailcheck:
	* added mailcheck-C.omf, legal.xml
	* removed mailcheck.sgml, mailcheck_applet.sgml,
	mailcheck_applet-C.omf
	modified:
	* configure.in, applets/gen_util/help/C/Makefile.am,
	mailcheck.xml, Makefile.am

	adding build stuff for mailcheck docs

2002-02-11  Jorn Baayen <jorn@nl.linux.org>
 
 	* applets/gen_util/pager.c:
 	* applets/gen_util/tasklist.c: replace the "pressed" signal on the Done
 	buttons in the preference dialogs with the "clicked" signal. Fixes an
 	odd bug where the button would be pressed on hover the next time you
 	opened the dialog.

2002-02-11  Kjartan Maraas  <kmaraas@gnome.org>

	* man/*: Added man pages from Christian Marillat.
	* configure.in: Create Makefile in man/
	
2002-02-10 John Fleck <jfleck@inkstain.net>

	* applets/gen_util/help/C/clock/clock.xml, clock/figures/*.png
	update figures and text of clock applet

2002-02-09 John Fleck <jfleck@inkstain.net>

        * configure.in
	* applets/gen_util/help/Makefile.am
	* applets/gen_util/help/C/Makefile.am
	* applets/gen_util/help/C/clock/Makefile.am, clock.xml
	added
	* applets/gen_util/help/C/legal.xml, clock-C.omf
	removed
	* clock_applet.xml clock_applet.sgml clock.sgml clock_applet-C.omf
	updated
	adding clock applet docs build stuff

2002-02-04 John Fleck <jfleck@inkstain.net>
        * configure.in