@@ -1,47 +1,0 @@
-NEWS
-README
-applets/desk-guide/deskguide_applet.desktop
-applets/fish/fish_applet.desktop
-applets/gen_util/clock_applet.desktop
-applets/gen_util/mailcheck_applet.desktop
-applets/gen_util/printer.desktop
-applets/tasklist/tasklist_applet.desktop
-desktop-links/Balsa.desktop
-desktop-links/Emacs.desktop
-desktop-links/Eterm.desktop
-desktop-links/GIMP.desktop
-desktop-links/Gmc.desktop
-desktop-links/Imlib_config.desktop
-desktop-links/Kterm.desktop
-desktop-links/Netscape.desktop
-desktop-links/Rxvt.desktop
-desktop-links/Tkrat.desktop
-desktop-links/UNIX-regular.desktop
-desktop-links/UNIX.desktop
-desktop-links/Vnterm.desktop
-desktop-links/Vim.desktop
-gmenu/gmenu.desktop
-gsm/session.desktop
-help-browser/gnome-help.desktop
-panel/gnome-panel-properties.desktop
-gnome-terminal/gnome-terminal.desktop
-gnome-hint/gnome-hint-properties.desktop
-applets/applet-dirs/Amusements.directory
-applets/applet-dirs/Clocks.directory
-applets/applet-dirs/Monitors.directory
-applets/applet-dirs/Multimedia.directory
-applets/applet-dirs/Network.directory
-applets/applet-dirs/Utility.directory
-desktop-links/Applications.directory
-desktop-links/Games.directory
-desktop-links/Graphics.directory
-desktop-links/Internet.directory
-desktop-links/Multimedia.directory
-desktop-links/Settings.directory
-desktop-links/System.directory
-desktop-links/Utilities.directory
-desktop-links/Root.directory
-desktop-links/Development.directory
-applets/gen_util/mailcheck.soundlist
-panel/panel.hints
-panel/panel.soundlist
