@@ -4,13 +4,6 @@ gnome-desktop/gnome-ditem-edit.c
 gnome-desktop/gnome-ditem-edit.h
 gnome-desktop/gnome-hint.c
 gnome-desktop/gnome-hint.h
-gnome-terminal/gnome-terminal.c
-gnome-terminal/gnome-terminal.desktop.in
-gnome-terminal/gnome-terminal.glade
-gnome-terminal/gnome-terminal.h
-gnome-terminal/gnome-terminal.xml
-gnome-terminal/gnome-x-font-selector.c
-gnome-terminal/gnome-x-font-selector.h
 gnome-about/gnome-about.c
 gnome-about/contributors.h
 gsm/command.c
