@@ -3,3 +3,10 @@ applets/desk-guide/gwmh.c
 applets/desk-guide/gwmh.h
 applets/desk-guide/gstc.c
 applets/desk-guide/gstc.h
+gnome-terminal/gnome-terminal.c
+gnome-terminal/gnome-terminal.desktop.in
+gnome-terminal/gnome-terminal.glade
+gnome-terminal/gnome-terminal.h
+gnome-terminal/gnome-terminal.xml
+gnome-terminal/gnome-x-font-selector.c
+gnome-terminal/gnome-x-font-selector.h
