@@ -1,2 +1,0 @@
-Use xml-i18n-update LL (where LL is your language code) in the po directory
-to update translations. xml-i18n-update is part of xml-i18n-tools.
