@@ -1,3 +1,9 @@
+2002-02-12  Gediminas Paulauskas <menesis@delfi.lt>
+
+	* README.tools: removed, obsolete.
+	* POTFILES.in: removed gnome-terminal source files. Please move
+	your translations to profterm module.
+
 2002-02-10  Gediminas Paulauskas <menesis@delfi.lt>
 
 	* POTFILES.in: add .desktop and .directory files
