@@ -1,3 +1,10 @@
+2002-02-12  Gediminas Paulauskas <menesis@delfi.lt>
+
+	* configure.in: removed GNOME_COMMON_INIT,
+	GNOME_PLATFORM_GNOME_2 -- obsolete.
+	GNOME_COMPILE_WARNINGS does not take arguments.
+	* TRANSLATABLE_FILES: removed, intltool handles all of them.
+
 2002-02-11  Mark McLoughlin  <mark@skynet.ie>
 
 	* configure.in: Version 1.5.8
